# dot-files

./: .gitattributes  .gitignore  .gitmodules  .sops.yaml  README  README.md  banana.nix  daedalus.nix  default.nix  flake.nix  ronin.nix  seedbox.nix  setup.sh  stride.nix  tealc.nix  zfs-setup.sh
awscli-saml-auth/: default.nix
cloudtoken/: default.nix  fix-shell-exporter.patch  rm-circular-dep-saml.patch
dot/: Xresources  bash_profile  bashrc  ghci  gitconfig  gitignore  plugins.vim  shell_prompt.sh  vimrc  vimrc.local  xbindkeysrc  xinitrc  xsession
dot/config/: nvim
dot/icons/: icons
dot/nixpkgs/: adjust-volume.nix  awscli-saml-auth.nix  config.nix  laas.nix  nix-ghci.nix
dot/nixpkgs/adjust-volume/: adjust-volume.cabal  default.nix
dot/nixpkgs/adjust-volume/src/: Main.hs
dot/sbt/: build.sbt  sbt
dot/ssh/: .gitignore  config  config.ronin  config.tealc  id_rsa.pub  ssh
dot/vim/: .VimballRecord  .netrwhist  haskellmode.config
dot/vim.local/: bundles.vim
dot/xmonad/: conkyrc  topstatusbar.sh  trayerbar.sh  xmonad.hs
home/: home.nix
home/bash/: default.nix
home/desktop/: default.nix  xmonad.hs
home/dev/: default.nix  ghci  stack.yaml
home/machine-specific/: default.nix  laptop.nix  tealc.nix  vm-guest.nix
laas-cli/: default.nix  deps.nix  version.patch
micros-cli/: default.nix  node-packages.nix
modules/: erase-your-darlings.nix  laptop.nix  networking.nix  services.nix  system.nix
nixos/: audio.nix  cachix.nix  configuration.nix  desktop.nix  hardware-configuration.nix  networking.nix  services.nix
stride/: default.nix
(+167 files in other folders)
