name:                adjust-volume
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Richard Wallace
maintainer:          rwallace@thewallacepack.net
category:            Sound
build-type:          Simple
cabal-version:       >=1.10

executable adjust-volume
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
                     , libnotify
                     , optparse-applicative
                     , text
                     , turtle
  hs-source-dirs:      src
  default-language:    Haskell2010
